# Graduation-Cap

./: README.md  package-lock.json
Hardware/STL/: Arm.stl  Baseplate.stl  Clip.stl  Driven Gear.stl  Driver Gear.stl
Software/esp-backend/: CMakeLists.txt  partitions.csv
Software/esp-backend/main/: CMakeLists.txt  idf_component.yml
Software/esp-backend/main/include/: app_state.h  filesystem_manager.h  matrix_controller.h  motor_controller.h  web_server.h  wifi_manager.h
Software/esp-backend/main/src/: filesystem_manager.cpp  main.cpp  web_server.cpp  wifi_manager.cpp
Software/react-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Software/react-frontend/src/: App.tsx  index.css  main.tsx  types.ts
Software/react-frontend/src/api/: api.ts
Software/react-frontend/src/components/: MatrixPreview.tsx  StatusBar.tsx  Toast.tsx
